--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+# langchain相关依赖
 langchain>=0.1.0
 openai>=1.0.0
 langchain-openai~=0.1.25
 pydantic~=2.10.6
 langchain-core~=0.2.43
+
+# FastAPI相关依赖
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.1
+starlette~=0.44.0
