--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langchain>=0.1.0
 langchain-openai~=0.1.25
 pydantic~=2.10.6
 langchain-core~=0.2.43
+langchain-community~=0.0.20
 
 # 环境变量管理（用于保存API密钥）
 python-dotenv==1.0.1
@@ -26,3 +27,6 @@ PyMySQL~=1.1.2
 
 # orm 框架依赖
 SQLAlchemy~=2.0.43
+python-jose~=3.3.0
+passlib~=1.7.4
+pydantic-settings~=2.1.0
