--- a/langchain_demo/.env
+++ b/langchain_demo/.env
@@ -1,3 +1,11 @@
 OPENAI_API_KEY=93e5f02e99061db3b6113e8db46a0fbd
 OPENAI_API_BASE=http://192.168.2.54:9015/v1/
 OPENAI_MODEL=qwen2.5-vl-72b-instruct
+EMBEDDING_MODEL=multimodal-embedding-v1
+
+# milvus 配置
+MILVUS_HOST=192.168.2.148
+MILVUS_PORT=19530
+
+MILVUS_USER=root
+MILVUS_PASSWORD=milvus
