--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # langchain相关依赖
-langchain>=0.1.0
-langchain-openai~=0.1.25
+langchain>=0.3,<0.4
+langchain-openai>=0.2,<0.3
 pydantic~=2.10.6
-langchain-core~=0.2.43
-langchain-community~=0.0.20
+langchain-core>=0.3,<0.4
+langchain-community>=0.3,<0.4
 
 # 环境变量管理（用于保存API密钥）
 python-dotenv==1.0.1
