--- a/langchain_demo/requirements.txt
+++ b/langchain_demo/requirements.txt
@@ -3,7 +3,6 @@ langchain>=0.3,<0.4
 langchain-openai>=0.2,<0.3
 langchain-core>=0.3,<0.4
 langchain-community>=0.3,<0.4
-langchain-milvus>=0.1.6,<0.2
 pydantic~=2.10.6
 
 # ========== 环境变量管理 ==========
@@ -11,10 +10,12 @@ python-dotenv==1.0.1
 
 # ========== RAG 相关依赖 ==========
 # 向量数据库
-pymilvus>=2.4.0  # Milvus 官方 Python SDK
-langchain-milvus>=0.1.0  # LangChain Milvus 集成
+pymilvus~=2.6.2  # Milvus 官方 Python SDK
+langchain-milvus>=0.1.6,<0.2  # LangChain Milvus 集成
 faiss-cpu>=1.7.4  # FAISS 向量存储（CPU 版本）
 # 如果有 GPU，可以用 faiss-gpu 替代 faiss-cpu
+
+protobuf~=6.33.0
 
 # 文档加载器
 pypdf>=4.0.0  # PDF 文档加载
