--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # langchain相关依赖
 langchain>=0.3,<0.4
 langchain-openai>=0.2,<0.3
-pydantic~=2.5.0
+pydantic>=2.7.4,<3.0.0
 langchain-core>=0.3,<0.4
 langchain-community>=0.3,<0.4
 
@@ -11,7 +11,6 @@ python-dotenv==1.0.1
 # FastAPI相关依赖
 fastapi>=0.110.0
 uvicorn[standard]>=0.27.1
-pydantic[email]==2.5.0
 starlette~=0.44.0
 
 # scripting和自动化相关依赖
@@ -31,3 +30,6 @@ SQLAlchemy~=2.0.43
 python-jose~=3.3.0
 passlib~=1.7.4
 pydantic-settings~=2.1.0
+
+# 配置文件解析
+pyyaml==6.0.1
